--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   /* Use linear-gradient for the gradient effect */
-  background: linear-gradient(to right, #107ff6, #ffd969);
+  background: linear-gradient(to top,/* #107ff6*/ #f9f9f9 , #fdfcfc 35%);
   /* Set background properties to cover the entire viewport */
   background-size: cover;
   background-repeat: no-repeat;
