--- a/src/App.css
+++ b/src/App.css
@@ -19,32 +19,122 @@ body {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*Animation styling Code Start*/
+
+.header-bold-yellow {
+  font-weight: bold;
+  color: yellow;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text-yellow {
+  color: yellow;
+}
+
+.background-container {
+  background-color: #aee3f5; /* Baby blue color */
+  /* Add other styles as needed */
+}
+
+.animation-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 87.5vh;
+    margin-top: 20px; /* Adjust the margin top */
+}
+
+.text-animation {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  font-size: 3rem;
+  color: yellow; /* Text color */
+  margin-bottom: 10px; /* Adjust spacing between lines */
+}
+
+.text-animation span {
+  opacity: 0;
+  animation: fadeInAnimation 1s ease forwards;
+  margin: 0 5px; /* Adjust spacing between letters */
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.text-animation span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+
+.text-animation span:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.text-animation span:nth-child(3) {
+  animation-delay: 0.5s;
+}
+
+.text-animation span:nth-child(4) {
+  animation-delay: 0.7s;
+}
+
+.text-animation span:nth-child(5) {
+  animation-delay: 0.9s;
+}
+
+.text-animation span:nth-child(6) {
+  animation-delay: 1.1s;
+}
+
+.text-animation span:nth-child(6) {
+  animation-delay: 1.3s;
+}
+
+/*Animation styling Code End*/
+
+.text-animation-subheader {
+  opacity: 0;
+  font-size: 1.5rem; /* Set font size */
+  color: yellow; /* Set text color */
+  transition: opacity 0.5s ease; /* Define transition for opacity */
+}
+
+.text-animation-subheader.show {
+  opacity: 1;
+}
+
+/****Filler Tag*****/
+.bg-baby-blue {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #aee3f5; 
 }
 
-.App-link {
-  color: #61dafb;
+.blue-text {
+  color: blue; /* Set the text color to blue */
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* OptionsBar.css */
+
+.transparent-grey {
+  background-color: rgba(128, 128, 128, 0.5); /* Grey color with 50% opacity */
+  padding: 20px;
 }
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler {
+  border: 1px solid rgba(128, 128, 128, 0.5);
+  padding: 20px;
+}
+
